working on some feature like performance cycle, role based acess, and resolve a big bug